--- a/index.html
+++ b/index.html
@@ -3,32 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>skullbomb</title>
+    <title>KAISEN</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <img src="skullbomb.jpg" alt="Skullbomb Logo">
-        <h1>SKULLBOMB: YOUR FUTURISTIC TECH HUB 🚀</h1>
-        <p>Welcome to skullbomb, where cutting-edge innovation meets next-gen tech trends. 🌐<br>
+        <h1>KAISEN: YOUR FUTURISTIC TECH HUB 🚀</h1>
+        <p>Welcome to KAISEN, where cutting-edge innovation meets next-gen tech trends. 🌐<br>
            Whether you're here to level up your skills or explore the tech universe,<br> skullbomb is your ultimate gateway. 💻<br>
            Join us and stay ahead of the curve! 🌟
         </p>
 
         <div class="links">
             <a href="#">TELEGRAM</a>
-            <a href="https://wa.me/553197441797">WHATSAPP</a>
-            <a href="https://github.com/skullbomb21">GITHUB</a>
-            <a href="https://whatsapp.com/channel/0029VaOssIhLSmbaZ45GWL0M">WHATSAPP CHANNEL</a>
-            <a href="https://t.me/skullbomb2">TELEGRAM CHANNEL</a>
-            <a href="#">SKULLBOMB MD</a>
-            <a href="https://www.paypal.me/JuditteBlaise">PAYPAL</a>
+            <a href="https://wa.me/40832816">WHATSAPP</a>
+            <a href="https://github.com/kaisen-sudo">GITHUB</a>
+            <a href="https://www.instagram.com/lau_rentzo?igsh=dzE4NnloamJ5ZWE1">INSTAGRAM</a>
         </div>
     </div>
 
     <div class="footer">
-        <p>© 2024 - 2025 Skullbomb. All rights reserved.</p>
-        <img src="skullbomb.jpg" alt="Skullbomb WA Channel">
+        <p>© 2024 - 2025 Kaisen. All rights reserved.</p>
+        <img src="skullbomb.jpg" alt="Kaisen WA Channel">
     </div>
 </body>
 </html>
