--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </p>
 
         <div class="links">
-            <a href="#">TELEGRAM</a>
+            <a href="t.me/Laurentzo">TELEGRAM</a>
             <a href="https://wa.me/40832816">WHATSAPP</a>
             <a href="https://github.com/kaisen-sudo">GITHUB</a>
             <a href="https://www.instagram.com/lau_rentzo?igsh=dzE4NnloamJ5ZWE1">INSTAGRAM</a>
